classDiagram
namespace m2gui {
  class Model
  class UtilityMonitor
  class SignalNetForceMoment
}

Model *-- UtilityMonitor
UtilityMonitor *-- SignalNetForceMoment : emit()

namespace display {
  class FigureConstant
}

TabDefault *-- Model
TabDefault <|-- TabNetForceMoment
TabDefault <|-- TabRealtimeNetForceMoment

TabNetForceMoment "1" *-- "2" TabRealtimeNetForceMoment
TabNetForceMoment --> SignalNetForceMoment : connect()

TabRealtimeNetForceMoment "1" *-- "6" FigureConstant
